Fix awkward spacing of cards on ultrawide monitors by adding a max-width to Cards grid element

--- a/src/components/Card/Cards.css
+++ b/src/components/Card/Cards.css
@@ -1,12 +1,12 @@
 .cards {
     display: grid;
     justify-items: center;
-    grid-template-columns: 50% 50%;
+    grid-template-columns: 1fr 1fr;
     margin-bottom: 6rem;
     font-size: 1.2rem;
     /* On 16:9, 1080p screens, the cards seem /too/ far apart. Change width of the <Cards/> element and center the grid. */
     width: 75%;
-    margin-left: 12.5%;
+    max-width: 55rem;
 }
 
 
@@ -14,14 +14,12 @@
 @media only screen and (max-width: 1700px) {
     .cards {
         width: 85%;
-        margin-left: 7.5%;
     }
 }
 /* Finally, have the grid be full width when below 1575px */
 @media only screen and (max-width: 1575px) {
     .cards {
         width: 100%;
-        margin-left: 0;
     }
 }
 
@@ -38,8 +36,5 @@
     .cards {
         grid-template-columns: 100%;
         margin-bottom: 4rem; /* Because in mobile the individual card components themselves have margin-bottom of 1rem */
-    }
-    .cards {
-        margin-left: 0; margin-right: 0;
     }
 }
